# CLionArduinoPlugin

./: .gitignore  .gitmodules  README.md  VERSION.md  release.xml
assets/: icons.ai  plugin-icons.psd
assets/docs/: plugin-description.html  plugin-description.md
resources/com/vladsch/clionarduinoplugin/localization/: strings.properties
resources/com/vladsch/clionarduinoplugin/templates/: @@.cpp  @@.ino  @LIBRARY_NAME@.cpp  @LIBRARY_NAME@.h  @library_name@.cpp  @library_name@.h  README.md  User_Setup.h
resources/com/vladsch/clionarduinoplugin/templates/project/: CMakeLists.txt
resources/com/vladsch/clionarduinoplugin/templates/project/library_arduino/: README.md  keywords.txt  library.properties
src/com/vladsch/clionarduinoplugin/: ArduinoSketchFileCreator.java  Bundle.java
src/com/vladsch/clionarduinoplugin/actions/: ChangeBuildSettingsAction.kt  ConnectAction.java  EditSettingsAction.java  NewSketchFile.java  NewSketchFile.kt  SerialMonitorBaudRateAction.kt  SerialMonitorBaudRateActionBase.kt  SerialMonitorPortAction.kt  SerialMonitorPortActionBase.kt  ShowSendOptionsAction.java
src/com/vladsch/clionarduinoplugin/components/: ApplicationConfigurable.java  ArduinoApplicationComponent.java  ArduinoApplicationSettings.java  ArduinoApplicationSettingsService.java  ArduinoFileTypeRegistration.java  ArduinoProjectComponent.kt  ArduinoProjectSettings.java  ArduinoProjectSettingsService.java  PluginProjectComponent.kt  ProjectConfigurable.java
src/com/vladsch/clionarduinoplugin/generators/: ArduinoLibraryGenerator.kt  ArduinoNewProjectSettings.java  ArduinoNewProjectSettingsPanel.java  ArduinoProjectGenerator.kt  ArduinoProjectGeneratorBase.java  ArduinoProjectGeneratorBase.kt  ArduinoProjectSettings.java  ArduinoProjectSettingsPanel.java  ArduinoSketchLibraryGenerator.java  ArduinoSketchLibraryGenerator.kt  ArduinoSketchProjectGenerator.java  ArduinoSketchProjectGenerator.kt  CppLanguageVersions.java  LineStringBuilder.java  SerialPortList.java
src/com/vladsch/clionarduinoplugin/generators/cmake/: AnchorType.java  ArduinoCMakeListsTxtBuilder.java  ArduinoCMakeListsTxtBuilder.kt  CMakeCommandAnchor.java  CMakeCommandAnchor.kt  CMakeFormatter.java  CMakeFormatterOptions.java  CMakeListsBuilder.java  CMakeListsTxtBuilder.java  CMakeListsTxtBuilder.kt  CMakeNodeFormatter.java  CMakeParser.java  CMakeParserOptions.java  README.md  Version.java
src/com/vladsch/clionarduinoplugin/resources/: ArduinoConfig.kt  ArduinoToolchainFiles.java  Board.kt  BuildConfig.java  Programmer.kt  README.rst.md  ResourceUtils.java  Strings.java  TemplateResolver.kt
src/com/vladsch/clionarduinoplugin/resources/templates/: $$.ino  $LIBRARY_NAME$.cpp  (+1 more)
src/com/vladsch/clionarduinoplugin/serial/: BuildListener.java  BuildMonitor.java  SerialMonitorPanel.form  SerialMonitorPanel.java  SerialMonitorToolWindow.java  SerialPortListener.java  SerialPortManager.java  SerialProjectComponent.java  StatusWidget.java
src/com/vladsch/clionarduinoplugin/settings/: ApplicationSettingsForm.form  ApplicationSettingsForm.java  ArduinoApplicationConfigurable.java  ArduinoApplicationSettings.java  ArduinoApplicationSettingsProxy.java  ArduinoProjectFileSettings.java  ArduinoProjectSettings.java  ArduinoSerialMonitorConfigurable.java  BoardNames.java  BuildConfigurationPatternType.java  CpuNames.java  LanguageVersionNames.java  LibraryCategoryNames.java  LibraryTypeNames.java  NewProjectSettingsForm.form  NewProjectSettingsForm.java  ProgrammerNames.java  ProjectBuildSettingsDialog.form  ProjectBuildSettingsDialog.java  ProjectSettingsDialog.java  ProjectSettingsForm.form  ProjectSettingsForm.java  RegExSettingsHolder.java  RegExTestDialog.form  RegExTestDialog.java  SendSettingsForm.form  SendSettingsForm.java  SerialBaudRates.java  SerialEndOfLineTypes.java  SerialMonitorSettingsForm.form  SerialMonitorSettingsForm.java  SerialPortNames.java  TextPaneTableCellRenderer.java
src/com/vladsch/clionarduinoplugin/util/: ApplicationSettingsListener.java  FileCreator.kt  ListenersRunner.java  ProjectSettingsListener.java  ReEntryGuard.java  RecursionGuard.java  StudiedWord.java  Utils.java  VariableExpander.kt
src/icons/: PluginIcons.java
src/io/github/francoiscambell/clionarduinoplugin/: CMakeListsEditor.java
test-resources/: cmake_builder_spec.md  cmake_formatter_spec.md  cmake_parser_spec.md
test-resources/created/arduino_lib1/: CMakeLists.txt  README.md  arduino_lib1.cpp  arduino_lib1.h  arduino_lib1_test.cpp  keywords.txt  library.properties
test-resources/created/arduino_lib2/: CMakeLists.txt  README.md  arduino_lib2.cpp  arduino_lib2.h  arduino_lib2_test.cpp  keywords.txt  library.properties
test-resources/created/sketch_1/: CMakeLists.txt
test-resources/created/sketch_2/: CMakeLists.txt
test-resources/created/static_lib1/: CMakeLists.txt  static_lib1.cpp  static_lib1.h
test-resources/created/static_lib2/: CMakeLists.txt  static_lib2.h
test-resources/created/tft_life/: CMakeLists.txt
test-resources/created/tft_life2/: CMakeLists.txt
test-resources/created/tft_test/: CMakeLists.txt  User_Setup.h  tft_test.ino
test-resources/projects/arduino_lib1/: CMakeLists.txt  arduino_lib1.h  keywords.txt
test-resources/projects/arduino_lib2/: CMakeLists.txt  User_Setup.h  arduino_lib2.h  arduino_lib2_test.cpp  keywords.txt  library.properties
test-resources/projects/non_arduino/: CMakeLists.txt  User_Setup.h  library.properties
test-resources/projects/sketch_1/: CMakeLists.txt  User_Setup.h
test-resources/projects/sketch_2/: CMakeLists.txt  User_Setup.h
test-resources/projects/static_lib1/: CMakeLists.txt
test-resources/projects/static_lib2/: CMakeLists.txt  static_lib2.cpp  static_lib2.h
test-resources/projects/tft_life/: CMakeLists.txt  lifedefs.h
test-resources/projects/tft_life2/: CMakeLists.txt  tft_life2.cpp
test-resources/projects/tft_test/: CMakeLists.txt  tft_test.ino
test-resources/projects/tft_test/libs/bits/: bits.cpp  bits.h
test/com/vladsch/clionarduinoplugin/: PluginTestSuite.java
test/com/vladsch/clionarduinoplugin/resources/: TemplateResolverTest.kt
(+89 files in other folders)
